added login business logic

--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
   "author": "Kartik Dwivedi",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "brcypt": "^1.0.1",
     "bridgifyx": "file:",
     "cors": "^2.8.5",
     "email": "file:",
     "express": "^4.21.2",
     "express-rate-limit": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0"
   },
